tests/baselines/reference/invalid-incomplete-groupname-u.errors.txt
invalid-incomplete-groupname-u.ts(14,4): error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
invalid-incomplete-groupname-u.ts(14,9): error TS1508: '\k' must be followed by a capturing group name enclosed in angle brackets.
invalid-incomplete-groupname-u.ts(14,12): error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.


==== invalid-incomplete-groupname-u.ts (3 errors) ====
    // Copyright 2017 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    description: GroupName is `< RegExpIdentifierName >`.
    esid: prod-GroupName
    negative:
      phase: parse
      type: SyntaxError
    features: [regexp-named-groups]
    ---*/
    
    
    /(?<a>.)\k/u;
       ~~~
!!! error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
            ~~
!!! error TS1508: '\k' must be followed by a capturing group name enclosed in angle brackets.
               ~
!!! error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.
    